--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "divergent-flow-core",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Core business logic and API services for Divergent Flow - ADHD-optimized productivity system",
   "private": true,
   "workspaces": [
@@ -13,13 +13,18 @@
     "lint": "npm run lint --workspaces",
     "clean": "npm run clean --workspaces",
     "install:all": "npm install",
-    "start": "npm run start --workspace=packages/div-flo-api"
+    "start": "npm run start --workspace=packages/div-flo-api",
+    "release": "standard-version && npm run sync-versions",
+    "release:minor": "standard-version --release-as minor && npm run sync-versions",
+    "release:major": "standard-version --release-as major && npm run sync-versions",
+    "sync-versions": "node scripts/sync-versions.js"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "typescript": "^5.0.0",
     "ts-node": "^10.9.0",
-    "nodemon": "^3.0.0"
+    "nodemon": "^3.0.0",
+    "standard-version": "^9.5.0"
   },
   "engines": {
     "node": ">=18.0.0"
