feat: add Docker support and versioning from package.json
- Added Dockerfile for multi-stage build of the Divergent Flow API.
- Created docker-compose.yml for service orchestration.
- Introduced npm scripts for Docker commands in package.json.
- Implemented dynamic version retrieval in VersionRepository from package.json.
- Added .dockerignore to exclude unnecessary files from Docker context.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "clean": "npm run clean --workspaces",
     "install:all": "npm install",
     "start": "npm run start --workspace=packages/div-flo-api",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f divergent-flow-api",
+    "docker:dev": "docker-compose up --build",
     "release": "standard-version && npm run sync-versions",
     "release:minor": "standard-version --release-as minor && npm run sync-versions",
     "release:major": "standard-version --release-as major && npm run sync-versions",
