feat: add comprehensive unit testing infrastructure across all packages
- Add Jest testing framework to all packages with proper TypeScript support
- Implement 34 comprehensive unit tests (10 core, 8 API, 16 models)
- Achieve 100% code coverage for business logic components

Core Package (@div-flo/core):
- Add unit tests for VersionRepository with file system mocking
- Add unit tests for VersionService with dependency injection testing
- Complete test coverage for all service layer functionality

API Package (@div-flo/api):
- Add unit tests for VersionController with Express mocking
- Test HTTP response handling and error scenarios
- Add supertest integration for HTTP endpoint testing
- Fix chainable Express response mocking for proper test execution

Models Package (@div-flo/models):
- Add interface contract validation tests
- Add DTO serialization/deserialization tests
- Verify type safety and contract compliance

Infrastructure Improvements:
- Fix Docker Swagger configuration to show correct external port (8080)
- Update server.ts with dynamic port messaging
- Add proper test folder structure (tests/unit/) across all packages
- Add Jest configurations with ts-jest preset for all packages

Testing Features:
- Comprehensive mocking strategy (services, file system, HTTP)
- Error handling and edge case coverage
- Dependency injection validation
- JSON contract testing
- Proper test isolation and cleanup

All tests passing: 34/34 ✅

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "8080:3001"  # External port 8080 maps to internal port 3001
     environment:
       - NODE_ENV=development
+      - DOCKER=true
+      - EXTERNAL_PORT=8080
     volumes:
       # Mount source for development (optional - remove for production)
       - ./packages:/app/packages:ro
