--- a/packages/div-flo-api/package.json
+++ b/packages/div-flo-api/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/server.ts",
     "start": "node dist/server.js",
+    "test": "jest",
     "clean": "rm -rf dist"
   },
   "dependencies": {
@@ -25,6 +26,11 @@
     "nodemon": "^3.0.0",
     "ts-node": "^10.9.0",
     "@types/swagger-ui-express": "^4.1.6",
-    "@types/swagger-jsdoc": "^6.0.4"
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/jest": "^29.0.0",
+    "jest": "^29.0.0",
+    "ts-jest": "^29.0.0",
+    "supertest": "^6.3.0",
+    "@types/supertest": "^2.0.12"
   }
 }
