--- a/packages/div-flo-models/package.json
+++ b/packages/div-flo-models/package.json
@@ -7,11 +7,15 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
+    "test": "jest",
     "clean": "rm -rf dist"
   },
   "dependencies": {},
   "devDependencies": {
     "typescript": "^5.0.0",
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "@types/jest": "^29.0.0",
+    "jest": "^29.0.0",
+    "ts-jest": "^29.0.0"
   }
 }
