fix: update TypeScript configuration for modern module resolution
- Fix deprecated moduleResolution 'Node10' to 'node' in root tsconfig
- Add ignoreDeprecations flag to suppress TypeScript 7.0 warnings
- Update all package tsconfig.json files to include tests directory
- Change rootDir to './' to accommodate test files alongside src files
- Remove exclusion of test files to enable proper TypeScript compilation

All tests still passing: 34/34 ✅

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,12 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "CommonJS", 
-    "moduleResolution": "Node10",
+    "moduleResolution": "node",
     "lib": ["ES2022"],
     "outDir": "./dist",
     "rootDir": "./",
     "strict": true,
+    "ignoreDeprecations": "5.0",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
