fix: resolve TypeScript path mapping and Jest type issues
- Add @types/jest dependency at root level for workspace-wide Jest types
- Configure baseUrl and paths mapping for @div-flo packages in tsconfig
- Add Jest and Node types to compilerOptions
- Update ignoreDeprecations to correct version (6.0)
- Remove test file exclusions to allow proper TypeScript checking

This resolves all red squiggles and TypeScript compilation errors.
All tests verified working: 34/34 ✅

--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "sync-versions": "node scripts/sync-versions.js"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.9.0",
     "nodemon": "^3.0.0",
-    "standard-version": "^9.5.0"
+    "standard-version": "^9.5.0",
+    "ts-node": "^10.9.0",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
