--- a/packages/div-flo-api/tsconfig.json
+++ b/packages/div-flo-api/tsconfig.json
@@ -2,8 +2,17 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./"
+    "rootDir": ".",
+    "baseUrl": ".",
+    "paths": {
+      "@div-flo/models": ["../../packages/div-flo-models/src"],
+      "@div-flo/core": ["../../packages/div-flo-core/src"]
+    }
   },
   "include": ["src/**/*", "tests/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "references": [
+    { "path": "../div-flo-models" },
+    { "path": "../div-flo-core" }
+  ]
 }
