--- a/packages/div-flo-core/tsconfig.json
+++ b/packages/div-flo-core/tsconfig.json
@@ -2,8 +2,15 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "./"
+    "rootDir": ".",
+    "baseUrl": ".",
+    "paths": {
+      "@div-flo/models": ["../../packages/div-flo-models/src"]
+    }
   },
   "include": ["src/**/*", "tests/**/*"],
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules"],
+  "references": [
+    { "path": "../div-flo-models" }
+  ]
 }
