fix: update build script to build packages in dependency order
- Build models first, then core, then API to respect TypeScript project references
- Fix ignoreDeprecations value from '6.0' to '5.0' for TypeScript 5.x compatibility
- This ensures Docker builds succeed with proper dependency resolution

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "npm run build --workspaces",
+    "build": "npm run build --workspace=packages/div-flo-models && npm run build --workspace=packages/div-flo-core && npm run build --workspace=packages/div-flo-api",
     "dev": "npm run dev --workspaces",
     "test": "npm run test --workspaces",
     "lint": "npm run lint --workspaces",
