feat: enhance logging and environment configuration
- Added Winston and Morgan for structured logging and HTTP request logging.
- Implemented middleware for request, response, and error logging with sensitive data sanitization.
- Updated server to include logging middleware and improved startup logging.
- Created a comprehensive .env.example file for environment configuration.
- Added setup-env.sh script for easy environment setup with options for local development and production.
- Updated package dependencies including Winston, Morgan, and related types.
- Refactored package.json and server.ts for improved dependency management and logging integration.

--- a/.gitignore
+++ b/.gitignore
@@ -39,12 +39,15 @@ coverage/
 # Yarn Integrity file
 .yarn-integrity
 
-# Environment variables
+# Environment variables (keep .env.example for template)
 .env
+.env.local
+.env.dev
+.env.staging  
+.env.prod
 .env.development.local
 .env.test.local
 .env.production.local
-.env.local
 
 # IDE/Editor files
 .vscode/settings.json
