--- a/packages/div-flo-api/package.json
+++ b/packages/div-flo-api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@div-flo/core": "*",
     "@div-flo/models": "*",
+    "cors": "^2.8.5",
     "express": "^4.18.0",
     "morgan": "^1.10.1",
     "reflect-metadata": "^0.2.2",
@@ -22,6 +23,7 @@
     "winston": "^3.18.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.0",
     "@types/jest": "^29.0.0",
     "@types/morgan": "^1.9.10",
