feat: update package versions to 0.1.5 and add development Docker configuration

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f divergent-flow-api",
-    "docker:dev": "docker-compose up --build",
+  "docker:dev": "docker-compose up --build",
+  "dev:docker": "docker compose -f docker-compose.dev.yml up --watch --build",
     "release": "standard-version && npm run sync-versions",
     "release:minor": "standard-version --release-as minor && npm run sync-versions",
     "release:major": "standard-version --release-as major && npm run sync-versions",
