feat: update Docker configuration, improve CORS handling, and refine development setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,14 @@
 services:
   divergent-flow-api:
+    container_name: div-flo-api
     build: 
       context: .
       dockerfile: Dockerfile
     ports:
       - "8080:3001"  # External port 8080 maps to internal port 3001
-    environment:
-      - NODE_ENV=${NODE_ENV}
-      - DOCKER=${DOCKER}
-      - PORT=${PORT}
-      - EXTERNAL_PORT=${EXTERNAL_PORT}
-      - LOG_LEVEL=${LOG_LEVEL}
-      - LOG_DIR=${LOG_DIR}
-      - API_VERSION=${API_VERSION}
+    env_file:
+      - .env
     volumes:
-      # Mount source for development (optional - remove for production)
-      - ./packages:/app/packages:ro
-      - ./package.json:/app/package.json:ro
       # Persistent logs volume
       - divergent_flow_logs:/var/log/divergent-flow
     networks:
