--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "install:all": "npm install",
     "start": "npm run start --workspace=packages/div-flo-api",
     "docker:build": "docker-compose build",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f divergent-flow-api",
-    "docker:dev": "docker-compose up --build",
-    "dev:docker": "docker compose -f docker-compose.dev.yml up --watch --build",
+    "docker:up": "docker-compose -f docker-compose.yml -p local-prod up -d --build",
+    "docker:down": "docker-compose -f docker-compose.yml -p local-prod down",
+    "docker:logs": "docker-compose -f docker-compose.yml -p local-prod logs -f divergent-flow-api",
+    "docker:dev:up": "docker-compose -f docker-compose.dev.yml -p dev up -d --build",
+    "docker:dev:down": "docker-compose -f docker-compose.dev.yml -p dev down",
+    "docker:dev:logs": "docker-compose -f docker-compose.dev.yml -p dev logs -f api-dev",
     "release": "standard-version && npm run sync-versions",
     "release:minor": "standard-version --release-as minor && npm run sync-versions",
     "release:major": "standard-version --release-as major && npm run sync-versions",
