--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# Comma-separated list of allowed origins for CORS (UI/dev/Docker)
+CORS_ORIGINS=http://localhost:5173,http://localhost:4173,http://localhost:3000,http://localhost:8080
 # Environment Configuration Template
 # Copy this file to .env and customize for your deployment
 
