--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,15 @@
-# Dependencies
+# Node dependencies
 node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build outputs
+# Build outputs (ignore only dist/build, NOT src)
 dist
 build
 *.tsbuildinfo
 
-# IDE
+# IDE/editor
 .vscode
 .idea
 *.swp
@@ -24,7 +24,7 @@ Thumbs.db
 .git
 .gitignore
 
-# Docker
+# Docker config (optional, keep if you want to build from a clean context)
 Dockerfile
 docker-compose*.yml
 .dockerignore
@@ -35,10 +35,7 @@ logs
 
 # Environment files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
 
 # Test files
 coverage
