--- a/package.json
+++ b/package.json
@@ -7,20 +7,17 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "npm run build --workspaces",
-    "dev": "npm run dev --workspaces",
-    "test": "npm run test --workspaces",
-    "lint": "npm run lint --workspaces",
-    "clean": "npm run clean --workspaces",
+  "build": "tsc -b",
+  "dev": "cd packages/div-flo-api && nodemon src/server.ts",
+  "test": "npm workspaces foreach --topological --no-private -- npm test",
+  "lint": "npm workspaces foreach --topological --no-private -- npm run lint",
+  "clean": "tsc -b --clean",
     "install:all": "npm install",
     "start": "npm run start --workspace=packages/div-flo-api",
-    "docker:build": "docker-compose build",
-    "docker:up": "docker-compose -f docker-compose.yml -p local-prod up -d --build",
-    "docker:down": "docker-compose -f docker-compose.yml -p local-prod down",
-    "docker:logs": "docker-compose -f docker-compose.yml -p local-prod logs -f divergent-flow-api",
-    "docker:dev:up": "docker-compose -f docker-compose.dev.yml -p dev up -d --build",
-    "docker:dev:down": "docker-compose -f docker-compose.dev.yml -p dev down",
-    "docker:dev:logs": "docker-compose -f docker-compose.dev.yml -p dev logs -f api-dev",
+    "docker:build": "docker-compose build --no-cache",
+    "docker:up": "docker-compose up -d --build",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f divergent-flow-api",
     "release": "standard-version && npm run sync-versions",
     "release:minor": "standard-version --release-as minor && npm run sync-versions",
     "release:major": "standard-version --release-as major && npm run sync-versions",
@@ -36,5 +33,8 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3"
   }
 }
