--- a/packages/div-flo-models/tsconfig.json
+++ b/packages/div-flo-models/tsconfig.json
@@ -2,9 +2,9 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": ".",
+    "rootDir": "./src",
     "composite": true
   },
-  "include": ["src/**/*", "tests/**/*"],
+    "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
