--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,27 @@ services:
       retries: 3
       start_period: 40s
 
+  div-flo-api-dev:
+    container_name: div-flo-api-dev
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8081:3001"  # Dev API on different external port
+    env_file:
+      - .env.dev
+    volumes:
+      - divergent_flow_logs_dev:/var/log/divergent-flow
+    networks:
+      - divergent-flow-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "node", "-e", "fetch('http://localhost:3001/health').then(r => r.ok ? process.exit(0) : process.exit(1)).catch(() => process.exit(1))"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
   # Future services can be added here (CLI, UI, databases, etc.)
   # divergent-flow-cli:
   #   build: ../divergent-flow-cli
@@ -38,4 +59,6 @@ volumes:
   api_data:
     driver: local
   divergent_flow_logs:
+    driver: local
+  divergent_flow_logs_dev:
     driver: local
