--- a/packages/div-flo-api/tsconfig.json
+++ b/packages/div-flo-api/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
+  "rootDir": ".",
     "baseUrl": ".",
     "paths": {
       "@div-flo/models": ["../../packages/div-flo-models/src"],
@@ -10,7 +10,7 @@
     },
     "composite": true
   },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "tests/**/*"],
   "exclude": ["node_modules", "dist"],
   "references": [
     { "path": "../div-flo-models" },
