--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^20.0.0",
     "nodemon": "^3.0.0",
     "standard-version": "^9.5.0",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.0",
     "typescript": "^5.9.3"
   },
