--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,13 +42,36 @@ services:
       retries: 3
       start_period: 40s
 
-  # Future services can be added here (CLI, UI, databases, etc.)
-  # divergent-flow-cli:
-  #   build: ../divergent-flow-cli
-  #   depends_on:
-  #     - divergent-flow-api
-  #   networks:
-  #     - divergent-flow-network
+
+  postgres:
+    image: postgres:15
+    container_name: div-flo-db
+    restart: always
+    environment:
+      POSTGRES_USER: divergent
+      POSTGRES_PASSWORD: divergentpw
+      POSTGRES_DB: div-flo-data
+    ports:
+      - "5432:5432"
+    volumes:
+      - div_flo_data:/var/lib/postgresql/data
+    networks:
+      - divergent-flow-network
+
+  postgres-dev:
+    image: postgres:15
+    container_name: div-flo-db-dev
+    restart: always
+    environment:
+      POSTGRES_USER: divergent
+      POSTGRES_PASSWORD: divergentpw
+      POSTGRES_DB: div-flo-data-dev
+    ports:
+      - "5433:5432"
+    volumes:
+      - div_flo_data_dev:/var/lib/postgresql/data
+    networks:
+      - divergent-flow-network
 
 networks:
   divergent-flow-network:
@@ -61,4 +84,8 @@ volumes:
   divergent_flow_logs:
     driver: local
   divergent_flow_logs_dev:
+    driver: local
+  div_flo_data:
+    driver: local
+  div_flo_data_dev:
     driver: local
