--- a/packages/div-flo-models/package.json
+++ b/packages/div-flo-models/package.json
@@ -10,12 +10,15 @@
     "test": "jest",
     "clean": "rm -rf dist"
   },
-  "dependencies": {},
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0",
     "@types/jest": "^29.0.0",
+    "@types/node": "^20.0.0",
     "jest": "^29.0.0",
-    "ts-jest": "^29.0.0"
+    "prisma": "^6.17.1",
+    "ts-jest": "^29.0.0",
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.17.1"
   }
 }
