--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "build": "tsc -b",
     "dev": "cd packages/div-flo-api && nodemon src/server.ts",
-    "test": "npm workspaces foreach --topological --no-private -- npm test",
-    "lint": "npm workspaces foreach --topological --no-private -- npm run lint",
+  "test": "npm test --workspaces",
+  "lint": "npm run lint --workspaces",
     "clean": "tsc -b --clean",
     "install:all": "npm install",
     "start": "npm run start --workspace=packages/div-flo-api",
