--- a/packages/div-flo-core/package.json
+++ b/packages/div-flo-core/package.json
@@ -13,15 +13,17 @@
   },
   "dependencies": {
     "@div-flo/models": "*",
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.8.0",
-    "reflect-metadata": "^0.2.2"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.0.0",
-    "jest": "^29.0.0",
-    "ts-jest": "^29.0.0",
-    "eslint": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0"
+    "eslint": "^8.0.0",
+    "jest": "^29.0.0",
+    "ts-jest": "^29.0.0"
   }
 }
