feat(api): Implement Capture and User controllers with CRUD operations
- Added CaptureController and UserController with routes for creating, retrieving, updating, and deleting captures and users.
- Integrated Swagger documentation for the new endpoints.
- Created CaptureService and UserService to handle business logic and interact with repositories.
- Implemented CaptureRepository and UserRepository for data access using Prisma.
- Updated server.ts to include new controllers and set up dependency injection.
- Added tests for CaptureController, UserController, CaptureService, and UserService to ensure functionality.
- Updated swagger.ts to reference the correct file paths for OpenAPI definitions.
- Adjusted tsconfig.json to include .js files for compatibility.

--- a/packages/div-flo-api/tsconfig.json
+++ b/packages/div-flo-api/tsconfig.json
@@ -10,7 +10,12 @@
     },
     "composite": true
   },
-    "include": ["src/**/*", "tests/**/*"],
+    "include": [
+      "src/**/*.ts",
+      "src/**/*.js",
+      "tests/**/*.ts",
+      "tests/**/*.js"
+    ],
   "exclude": ["node_modules", "dist"],
   "references": [
     { "path": "../div-flo-models" },
