--- a/packages/div-flo-api/package.json
+++ b/packages/div-flo-api/package.json
@@ -2,11 +2,11 @@
   "name": "@div-flo/api",
   "version": "0.1.10",
   "description": "API server for Divergent Flow",
-  "main": "dist/server.js",
+  "main": "dist/src/server.js",
   "scripts": {
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "start": "node dist/server.js",
+  "start": "node dist/src/server.js",
     "test": "jest",
     "clean": "rm -rf dist"
   },
