--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,6 +15,4 @@ jobs:
     steps:
       - uses: googleapis/release-please-action@v4
         with:
-          command: release-pr
-          config-file: release-please-config.json
-          manifest-file: .release-please-manifest.json
+          release-type: node
