feat: enhance logging setup with writable directory fallback and update release process documentation

--- a/package.json
+++ b/package.json
@@ -7,33 +7,20 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "tsc -b",
+    "build": "tsc -b -v",
+    "build:clean": "tsc -b --clean && tsc -b -v",
     "dev": "cd packages/div-flo-api && nodemon src/server.ts",
     "test": "npm test --workspaces",
     "lint": "npm run lint --workspaces",
     "clean": "tsc -b --clean",
     "install:all": "npm install",
     "start": "npm run start --workspace=packages/div-flo-api",
-    "docker:build": "docker compose build --no-cache",
-    "docker:up": "docker compose up -d --build",
-    "docker:up:prod": "docker compose up -d --build divergent-flow-api",
-    "docker:up:dev": "docker compose up -d --build div-flo-api-dev",
-    "docker:down": "docker compose down",
-    "docker:down:prod": "docker compose stop divergent-flow-api && docker compose rm -f divergent-flow-api",
-    "docker:down:dev": "docker compose stop div-flo-api-dev && docker compose rm -f div-flo-api-dev",
-    "docker:logs": "docker compose logs -f divergent-flow-api",
-    "docker:logs:prod": "docker compose logs -f divergent-flow-api",
-    "docker:logs:dev": "docker compose logs -f div-flo-api-dev",
-    "release": "standard-version && npm run sync-versions",
-    "release:minor": "standard-version --release-as minor && npm run sync-versions",
-    "release:major": "standard-version --release-as major && npm run sync-versions",
     "sync-versions": "node scripts/sync-versions.js"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "nodemon": "^3.0.0",
-    "standard-version": "^9.5.0",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.0",
     "typescript": "^5.9.3"
