chore: update .gitignore to track only local Docker Compose files

--- a/.gitignore
+++ b/.gitignore
@@ -102,11 +102,4 @@ swagger.json
 .env.debug
 
 # Local-only Docker Compose files (intentionally untracked)
-docker-compose.yml
-docker-compose.yaml
-docker-compose.*.yml
-docker-compose.*.yaml
-compose.yml
-compose.yaml
-compose.*.yml
-compose.*.yaml
+docker-compose.local.yml
