--- a/fly-staging.toml
+++ b/fly-staging.toml
@@ -8,6 +8,13 @@ primary_region = 'iad'
 
 [build]
 
+[deploy]
+  # Apply Prisma migrations to the Neon DB before switching traffic
+  release_command = "npx prisma migrate deploy --schema=packages/div-flo-models/prisma/schema.prisma"
+
+[env]
+  ENABLE_SWAGGER = "true"
+
 [http_service]
   internal_port = 3001
   force_https = true
