--- a/fly.toml
+++ b/fly.toml
@@ -8,6 +8,10 @@ primary_region = 'iad'
 
 [build]
 
+[deploy]
+  # Apply Prisma migrations before switching traffic
+  release_command = "npx prisma migrate deploy --schema=packages/div-flo-models/prisma/schema.prisma"
+
 [http_service]
   internal_port = 3001
   force_https = true
