feat: add OIDC user provisioning endpoint and related services
- Implemented a new endpoint `/v1/user/provision-oidc` in UserController to provision users from OIDC claims.
- Updated UserService to handle OAuth accounts and user profiles.
- Added methods to create and link OAuth accounts and user profiles in UserService.
- Updated package.json files to enforce specific versions of Prisma and @prisma/client.

--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3"
+  },
+  "overrides": {
+    "prisma": "6.17.1",
+    "@prisma/client": "6.17.1"
   }
 }
