--- a/packages/div-flo-api/package.json
+++ b/packages/div-flo-api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "test": "NODE_OPTIONS='--localstorage-file=./.jest-localstorage' jest",
+    "test": "jest",
     "clean": "rm -rf dist"
   },
   "dependencies": {
