--- a/packages/div-flo-models/package.json
+++ b/packages/div-flo-models/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "NODE_OPTIONS='--localstorage-file=./.jest-localstorage' jest",
+    "test": "jest",
     "clean": "rm -rf dist"
   },
   "devDependencies": {
