--- a/packages/div-flo-api/package.json
+++ b/packages/div-flo-api/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@div-flo/api",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "API server for Divergent Flow",
   "main": "dist/src/server.js",
   "scripts": {
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "start": "node dist/src/server.js",
     "test": "jest",
     "clean": "rm -rf dist"
   },
@@ -15,6 +14,7 @@
     "@div-flo/models": "*",
     "cors": "^2.8.5",
     "express": "^4.18.0",
+    "jose": "^6.1.2",
     "morgan": "^1.10.1",
     "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
