--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "divergent-flow-core",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Core business logic and API services for Divergent Flow - ADHD-optimized productivity system",
   "private": true,
   "workspaces": [
@@ -30,5 +30,9 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3"
+  },
+  "overrides": {
+    "prisma": "6.17.1",
+    "@prisma/client": "6.17.1"
   }
 }
