--- a/packages/div-flo-models/package.json
+++ b/packages/div-flo-models/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@div-flo/models",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Shared interfaces and DTOs for Divergent Flow",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch",
     "test": "jest",
     "clean": "rm -rf dist"
   },
@@ -14,11 +13,11 @@
     "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
     "jest": "^29.0.0",
-    "prisma": "^6.17.1",
+    "prisma": "6.17.1",
     "ts-jest": "^29.0.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@prisma/client": "^6.17.1"
+    "@prisma/client": "6.17.1"
   }
 }
