--- a/packages/div-flo-api/package.json
+++ b/packages/div-flo-api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "test": "jest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "clean": "rm -rf dist"
   },
   "dependencies": {
@@ -25,17 +26,15 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.0",
-    "@types/jest": "^29.0.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "^20.0.0",
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
-    "jest": "^29.0.0",
     "nodemon": "^3.0.0",
     "supertest": "^6.3.0",
-    "ts-jest": "^29.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.4"
   }
 }
