--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "CommonJS", 
     "moduleResolution": "node",
     "lib": ["ES2022"],
-    "types": ["jest", "node"],
+    "types": ["vitest/globals", "node"],
     "strict": true,
     "ignoreDeprecations": "5.0",
     "esModuleInterop": true,
