--- a/packages/div-flo-core/package.json
+++ b/packages/div-flo-core/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@div-flo/core",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Core business logic and data access for Divergent Flow",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "scripts": {
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "test": "jest --runInBand",
+    "test": "vitest run",
     "lint": "eslint src/**/*.ts",
     "clean": "rm -rf dist"
   },
@@ -19,11 +19,9 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
-    "jest": "^29.0.0",
-    "ts-jest": "^29.0.0"
+    "vitest": "^4.0.14"
   }
 }
