--- a/packages/div-flo-models/package.json
+++ b/packages/div-flo-models/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@div-flo/models",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Shared interfaces and DTOs for Divergent Flow",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,7 +15,8 @@
     "jest": "^29.0.0",
     "prisma": "6.17.1",
     "ts-jest": "^29.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^4.0.14"
   },
   "dependencies": {
     "@prisma/client": "6.17.1"
