fix: update CORS_ORIGINS for staging environment and enhance logging

--- a/fly-staging.toml
+++ b/fly-staging.toml
@@ -14,7 +14,7 @@ primary_region = 'iad'
 
 [env]
   ENABLE_SWAGGER = "true"
-  CORS_ORIGINS = "*.netlify.app,http://localhost:5173"
+  CORS_ORIGINS = "https://divflow-staging.netlify.app,*.netlify.app,http://localhost:5173"
 
 [http_service]
   internal_port = 3001
