--- a/fly.toml
+++ b/fly.toml
@@ -12,6 +12,13 @@ primary_region = 'iad'
   # Apply Prisma migrations before switching traffic
   release_command = "npx prisma migrate deploy --schema=packages/div-flo-models/prisma/schema.prisma"
 
+[env]
+  ENABLE_SWAGGER = "false"
+  OIDC_ISSUER_URL = "https://divergent-flow-keycloak.fly.dev/realms/df-prod"
+  OIDC_AUDIENCE = "web-app,cli-app"
+  CORS_ORIGINS = "https://divergent-flow.netlify.app,https://www.divergent-flow.netlify.app"
+  APP_BASE_URL = "https://divergent-flow-core.fly.dev"
+
 [http_service]
   internal_port = 3001
   force_https = true
