--- a/packages/div-flo-api/package.json
+++ b/packages/div-flo-api/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@div-flo/api",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "API server for Divergent Flow",
   "main": "dist/src/server.js",
   "scripts": {
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "test": "jest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "clean": "rm -rf dist"
   },
   "dependencies": {
@@ -14,6 +15,7 @@
     "@div-flo/models": "*",
     "cors": "^2.8.5",
     "express": "^4.18.0",
+    "jose": "^6.1.2",
     "jose": "^6.1.2",
     "morgan": "^1.10.1",
     "reflect-metadata": "^0.2.2",
@@ -25,17 +27,15 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.0",
-    "@types/jest": "^29.0.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "^20.0.0",
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
-    "jest": "^29.0.0",
     "nodemon": "^3.0.0",
     "supertest": "^6.3.0",
-    "ts-jest": "^29.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.14"
   }
 }
