--- a/fly-staging.toml
+++ b/fly-staging.toml
@@ -14,7 +14,7 @@ primary_region = 'iad'
 
 [env]
   ENABLE_SWAGGER = "true"
-  AUTH0_ISSUER = "https://dev-axm38gs1176ibx7p.us.auth0.com"
+  AUTH0_ISSUER = "https://dev-axm38gs1176ibx7p.us.auth0.com/"
   AUTH0_AUDIENCE = "https://divfloapistage"
   AUTH0_JWKS_URL = "https://dev-axm38gs1176ibx7p.us.auth0.com/.well-known/jwks.json"
   AUTH0_ROLES_CLAIM = "roles"
