feat: add Redis support and enhance user profile management in user service

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "redis": "^5.10.0"
   },
   "overrides": {
     "prisma": "6.17.1",
