--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -14,8 +14,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: |
-          # Set database secret before deployment
+          # Set database and redis secrets before deployment
           flyctl secrets set DATABASE_URL="${{ secrets.PROD_DATABASE_URL }}" -a divergent-flow-core || true
+          flyctl secrets set REDIS_URL="${{ secrets.PROD_REDIS_URL }}" -a divergent-flow-core || true
           
           flyctl deploy --remote-only
         env:
