--- a/packages/div-flo-core/tsconfig.json
+++ b/packages/div-flo-core/tsconfig.json
@@ -9,7 +9,7 @@
     },
     "composite": true
   },
-    "include": ["src/**/*", "tests/**/*"],
+    "include": ["src/**/*", "tests/**/*", "../../../src/logging/**/*"],
   "exclude": ["dist", "node_modules"],
   "references": [
     { "path": "../div-flo-models" }
