--- a/packages/div-flo-api/package.json
+++ b/packages/div-flo-api/package.json
@@ -17,6 +17,8 @@
     "express": "^4.18.0",
     "jose": "^6.1.2",
     "morgan": "^1.10.1",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
