--- a/packages/div-flo-core/package.json
+++ b/packages/div-flo-core/package.json
@@ -18,6 +18,10 @@
     "tsyringe": "^4.8.0",
     "uuid": "^13.0.0"
   },
+  "files": [
+    "dist/",
+    "src/logging/"
+  ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
