feat: releasing captures to prod (#31)
* feat: add capture filtering and user schema for authentication

- Add query parameter to filter unmigrated captures
- Add user listing endpoint with Swagger documentation
- Redesign User schema for OAuth and password authentication
  - Add username, emailVerified, password, and lastLoginAt fields
  - Extract profile data to UserProfile model
  - Add OAuthAccount model for OAuth provider integration

* feat: update User API for new authentication schema

- Add username field and getUserByUsername endpoint
- Add findByUsername to UserRepository and IUserRepository
- Update UserService with username uniqueness validation
- Add UserProfile and OAuthAccount support in repository queries
- Update Swagger documentation with new User schema
- Fix all tests for new schema (100% passing)
- Increase API test coverage from 49% to 97%
- Add comprehensive controller tests for all endpoints
- Fix VersionRepository test mocking for fs.existsSync

* fix(ci): update release-please action (#4)

* feat: add CONTRIBUTING.md and link from README

* fix: configure release-please for monorepo

* fix(ci): relax subject pattern in pr lint workflow

* fix(ci): update release-please action

* fix(ci): add release-pr command to bootstrap release-please

* fix(ci): remove unnecessary command and config from release-please action

* chore: stop tracking local docker-compose

* feat: update README and .gitignore to include local Docker Compose files

* feat: update README and .gitignore to include local Docker Compose files (#9)

* fix(ci): update release-please action (#5)

* feat: add capture filtering and user schema for authentication

- Add query parameter to filter unmigrated captures
- Add user listing endpoint with Swagger documentation
- Redesign User schema for OAuth and password authentication
  - Add username, emailVerified, password, and lastLoginAt fields
  - Extract profile data to UserProfile model
  - Add OAuthAccount model for OAuth provid

--- a/fly-staging.toml
+++ b/fly-staging.toml
@@ -14,8 +14,10 @@ primary_region = 'iad'
 
 [env]
   ENABLE_SWAGGER = "true"
-  OIDC_ISSUER_URL = "https://divergent-flow-keycloak.fly.dev/realms/df-staging"
-  OIDC_AUDIENCE = "web-app,cli-app"
+  AUTH0_ISSUER = "https://dev-axm38gs1176ibx7p.us.auth0.com/"
+  AUTH0_AUDIENCE = "https://divfloapistage"
+  AUTH0_JWKS_URL = "https://dev-axm38gs1176ibx7p.us.auth0.com/.well-known/jwks.json"
+  AUTH0_ROLES_CLAIM = "roles"
   CORS_ORIGINS = "https://divflow-staging.netlify.app,*.netlify.app,http://localhost:6137"
   APP_BASE_URL = "https://divergent-flow-core-staging.fly.dev"
 
